# jaringobe

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
agents/: backend.md  (+6 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth_budget.py  0002_mealplan.py  0003_fridge.py  0004_household_budget_ext.py  0005_store_connections.py  0006_meal_completion.py  0007_store_connections_global.py  0008_notification_app.py  a4b2f8fd96f3_initial_budget_mealplan_schema.py
backend/app/: main.py
backend/app/api/v1/: budget.py  household.py  mealplan.py  router.py
backend/app/core/: config.py  db.py  deps.py  errors.py  ratelimit.py  schema.py  security.py
backend/app/domains/auth/: models.py  router.py  schemas.py  service.py
backend/app/domains/budget/: models.py  router.py  schemas.py  service.py
backend/app/domains/fridge/: models.py  router.py  schemas.py  service.py
backend/app/domains/household/: models.py  router.py  schemas.py  service.py
backend/app/domains/mealplan/: generator.py  llm.py  models.py  pricing.py  router.py  schemas.py  service.py
backend/app/domains/notification/: models.py  router.py  scheduler.py  schemas.py  sender.py  service.py
backend/app/models/: __init__.py  budget.py  household.py  mealplan.py  price.py
backend/app/schemas/: budget.py  common.py  household.py  mealplan.py
backend/app/services/: budget.py  household.py  llm.py
backend/tests/: conftest.py  test_auth_app_login.py  test_auth_oauth.py  test_auth_session.py  test_budget.py  test_fridge.py  test_household.py  test_mealplan.py  test_middleware.py  test_notification.py  test_notification_scheduler.py  test_notification_sender.py  test_security_unit.py  test_shopping_flow.py  test_store.py  test_store_connections.py  test_user_region.py
(+272 files in other folders)
