[project]
name = "jaringobe-backend"
version = "0.1.0"
description = "JARINGOBE(자린고비) FastAPI 백엔드"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "alembic>=1.13",
    "anthropic>=0.39",
    "pyjwt>=2.13.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
# SQLAlchemy async 는 내부적으로 greenlet 스위칭을 사용 — 미지정 시 await 이후 라인 누락
concurrency = ["greenlet", "thread"]
